ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    # Set the authentication endpoint for token verification
    nginx.ingress.kubernetes.io/auth-url: "http://user-service:3001/verify-token"
    # Exclude the /login path from authentication
    nginx.ingress.kubernetes.io/server-snippet: |
      location /user-service/login {
        auth_request off;
      }
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /user-service/login
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 3001
      - path: /user-service
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 3001
      - path: /question-service
        pathType: Prefix
        backend:
          service:
            name: question-service
            port:
              number: 3002
      - path: /code-execution-service
        pathType: Prefix
        backend:
          service:
            name: code-execution-service
            port:
              number: 3007
      - path: /collaboration-service
        pathType: Prefix
        backend:
          service:
            name: collaboration-service
            port:
              number: 3004
      - path: /matching-service
        pathType: Prefix
        backend:
          service:
            name: matching-service
            port:
              number: 3006
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80
